# isaac_datagen

./: .artifacts.yaml  .gitignore  CLAUDE.md  README.md  pyproject.toml
.docs_claude/: clean-datagen-design.md  lighting-jitter-mechanism.md  migration-summary.md  multiscale-point-descriptor.md  prompt-paradigms-and-fourier-kernel-attention.md  psc-isaac-datagen-footguns.md  samv2-mask-decoder-atlas.html  samv2-mask-decoder-atlas.md  verifier-overview.md  visualization-mechanisms.md
.docs_claude/one_off_tests/: download_background_datasets.py  gen_procedural_backgrounds.py  ingest30_smokeA_init.py  ingest30_smokeB_init.py  mock_decentered_poser.py  validate_background_images.py
.docs_claude/plans/active/: class-to-reference-rgba-dedup.md  decentered-1inst-pools-and-shift-aug.md  lighting-diagnostic-dark-box-flags.md  optflow-relabel-residual-migrate.md  per-target-shadow-occluders.md  psc-isaac-singularity.md  render-darkness-investigation.md  store-snacks-kshot-surround-renders.md
.docs_claude/plans/completed/: add-inlier-data-phase3.md  add-proposals-resumable.md  artifact-registry.md  blender-dry-run-sanity-renderer.md  channel-swap-unseen-eval-and-callback.md  cid-mask-dual.md  cli-tldr-help.md  collect-objects-chain-datasets.md  correspondence-usdz-open3d-viewer.md  depth-jitter-stacker.md  distant-light-key-light.md  emptyworld-1inst-regeneration.md  expanded-refseg-optflow-regen.md  expanded-refseg-v2-regen.md  extract-isaac-datagen.md  fix-occupancy-grid-full-wall.md  gap-jitter-stacker.md  graspable-object-filter-registry.md  hf-dataset-sync.md  inlier-border-eps-margin.md  jagged-columns-jitter-stacker.md  jagged2-expanded-refseg-v2-gen.md  mesh-convert-ycb.md  object-placer-registry.md  obs-full-alpha-toggle.md  obsmask-cid-iid-validator.md  obsmask-occlusion-and-viz.md  optflow-1-reference-dataset.md  optflow-2-writer-capture.md  optflow-4-class-keyed-one-to-many.md  optflow-5-cid-iid-masks.md  optflow-6-nested-obsmask.md  optflow-centroid-ref-and-visualize.md  pca-basis-mandatory-field.md  per-target-shadow-occluders.md  pipeline-orchestrator.md  plain-scene-mutations-disable-physics.md  pose-generation-poser-registry.md  pre-capture-render-warmup.md  proto-reference-seg-writer-finish.md  (+23 more)
src/isaac_datagen/: __init__.py  add_inlier_data.py  add_proposals.py  asset_catalogs.py  blender_render.py  capture.py  cid_iid_trace.py  clean_datagen.py  debug_export.py  debug_render.py  downsample_proposals.py  extract_store_objects.py  filter_class.py  filters.py  grasp_policies.py  graspableobj_to_optflow_obj.py  hardwares.py  ingest30_configs.py  ingest30_drive.py  ingest30_smoke.py  isaac_utils.py  make_unseen.py  measure_luminance.py  mesh_blender.py  mesh_convert.py  mesh_radius.py  migrate_descriptors_backbone.py  migrate_descriptors_spatial.py  migrate_pca_basis.py  objects.py  optflow_render.py  optflow_writer.py  orientations.py  patch_grasp_frames.py  placers.py  pool_object_radii.py  pose_planning.py  posers.py  proposal_gate.py  reference_seg_writer.py  (+19 more)
src/isaac_datagen/configs/: amazon.yaml  blues-expanded-refseg-v2.yaml  emptyworld-optflow-snacks-kshot-snack031-1inst-decentered.yaml  emptyworld-optflow-snacks-kshot-snack031-1inst.yaml  emptyworld-optflow-snacks-kshot-snack033-1inst.yaml  emptyworld-optflow-snacks-kshot-snack034-1inst.yaml  emptyworld-optflow-snacks-kshot-snack035-1inst.yaml  expanded-refseg-v2.yaml  expanded-refseg.yaml  jagged-expanded-refseg-v2.yaml  jagged2-expanded-refseg-v2.yaml  mixed.yaml  random3_smoke.yaml  randomized.yaml  shelf.yaml  staggered.yaml  store001-optflow-keep.yaml  store001-optflow-remove.yaml  store001-optflow-replace.yaml  store001-optflow-snacks-kshot-snack031-1inst.yaml  store001-optflow-snacks-kshot-snack031.yaml  store001-optflow-snacks-kshot-snack033-1inst.yaml  store001-optflow-snacks-kshot-snack033.yaml  store001-optflow-snacks-kshot-snack034-1inst.yaml  store001-optflow-snacks-kshot-snack034.yaml  store001-optflow-snacks-kshot-snack035-1inst.yaml  store001-optflow-snacks-kshot-snack035.yaml  store001-optflow-snacks-set1-plus-snack031.yaml  store001-optflow-snacks-set1-plus-snack033.yaml  store001-optflow-snacks-set1-plus-snack034.yaml  store001-optflow-snacks-set1-plus-snack035.yaml  store001-optflow-snacks-set1.yaml  store001-optflow-snacks-set2.yaml  store001-optflow-verify.yaml  store001-optflow.yaml  tuna_only_smoke.yaml
src/isaac_datagen/debug_scripts/: backfill_grasp_point.py  check_front_face.py  debug_occupancy.py  debug_scene.py  pull_flatten_usd.py  verify_centroid_ref.py  viz_optflow.py  viz_optflow_objects.py
src/isaac_datagen/resources/: crunch_box.usdc  generate_uv_png.py  pallet.usdc  rack_scaled_copy.usdc  workbench_world.usd
src/isaac_datagen/resources/blender/: amazon_box.blend  amazon_box.blend1  kleenex_box.blend  kleenex_box.blend1
src/isaac_datagen/resources/boxes/: amazon_box.usdc  kleenex_box.usdc
src/isaac_datagen/resources/boxes/textures/: augment_amazon_texture.py
tests/: test_asset_catalogs.py  test_freeze_physics.py  test_geo_rotation_bbox.py  test_iid_canonicalizer.py  test_ingest30_configs.py  test_ingest30_drive.py  test_ingest30_smoke.py  test_mesh_radius.py  test_orientations.py  test_pool_object_radii.py  test_posers.py  test_set_transform_compose.py  test_store_mutations.py  test_store_scene.py
